--- a/charts/backstage/values.yaml
+++ b/charts/backstage/values.yaml
@@ -375,6 +375,12 @@ orchestrator:
     # -- Name for the user-configured external Database
     externalDBName: ""
 
+    # -- Host for the user-configured external Database
+    externalDBHost: ""
+
+    # -- Port for the user-configured external Database
+    externalDBPort: ""
+
     # -- Image for the init container used by the create-db job
     initContainerImage: "{{ .Values.upstream.postgresql.image.registry }}/{{ .Values.upstream.postgresql.image.repository }}:{{ .Values.upstream.postgresql.image.tag }}"
 
